# Legion

./: .clangd  .gitignore  .gitmodules  .luaurc  .luaurc_  .nvim.lua  CMakeLists.txt  CMakePresets.json  Storage.luau  api-docs.json  builtin.d.luau  definitions.d.luau  dummy.luau  globals.d.luau  license  main.luau  readme.md  std.luau  test.luau  todo.md  typedefs.d.luau
engine/luau/: Button.luau  init.luau  state.luau
engine/src/: common.h  engine.cpp  luau.Physical.cpp  luau.Rect.cpp  luau.Vec2.cpp  luau.builtin.cpp  luau.defs.h  luau.fs.cpp  luau.h  luau.renderer.cpp  systems.h  systems.solvers.cpp  types.Font.cpp  types.Texture.cpp  types.h
example/: draw.luau  dummyImage.luau  fpsCounter.luau  init.luau
inc/: ECS.h  Legion.h  common.h
include/: builtin.h  builtin_types.h  common.h  component.h  comptime_enum.h  engine.h  event.h  gui.h  instance.h  lua_atom.h  lua_event.h  lua_util.h  structs.h  systems.h  types.h  util.h
include/builtin/: definitions.h  method_atom.h  typedefs.h  utility.h
include/common/: common.h  comptime.h
legion_luau/: Button.luau  Event.luau  game.luau  init.luau  state.luau  utility.luau
require/: Buffer.luau  GameState.luau  Image.luau  InputModule.luau  RunModule.luau  SDL.luau  TRS.luau  button.luau  event.luau  filesystem.luau  init.luau  input.luau  iterator.luau  run.luau  state.luau
require/SDL/: init.luau  render.decl.luau
require/ui/: ImageButton.luau  ImageLabel.luau
resources/: builtin_defs.d.luau  builtin_docs.json  config.d.luau  module_template.luau  type_definitions.d.luau
resources/luau_library/: buffer_wrapper.luau  event.luau  fixed_width_buffer.luau  iterator.luau  task.luau
scripts/: main.luau  module.lua
src/: Dynamic_bitset.cpp  Expected.h  Font.cpp  Legion.h  Lu_recti64.cpp  Lu_sizei32.cpp  Lu_vec2d.cpp  Lu_vec2f.cpp  Lu_vec2i.cpp  Require.h  Script.cpp  Texture.cpp  common.Dynamic_bitset.cpp  common.h  common.utilities.cpp  component.h  comptime.h  core.h  ecs.h  ecs.h_  engine.cpp  engine.cpp~  engine.h  event.cpp  event.h  event.intern.cpp  legion.engine.cpp  legion.h  legion.main.cpp  luau.Clickable.cpp  luau.Color.cpp  luau.Coloru32.cpp  luau.Physical.cpp  luau.Rect.cpp  luau.Recti64.cpp  luau.Sizei32.cpp  luau.V2.cpp  luau.Vec2.cpp  luau.Vec2d.cpp  luau.Vec2f.cpp  (+23 more)
src/builtin/: builtin.cpp  color.cpp  coloru32.cpp  filesystem.cpp  fs.cpp  global_types.cpp  globals.cpp  mat3x3.cpp  matrix_types.cpp  physical_component.cpp  recti64.cpp  renderer.cpp  sdl.cpp  types.cpp  utility.cpp  vec2d.cpp  vec2i.cpp  vector_types.cpp
src/common/: DynamicBitset.cpp  dynamic_bitset.cpp  lua_util.cpp  lua_util.cpp~  utilities.cpp
src/engine/: BuiltinModule.h  Require.cpp  builtin_module.h  comptime_enum.h  core.cpp  core.cpp~  engine.cpp  lua_base.h  lua_base_impl.cpp  qol.cpp
src/gui/: Element.cpp  Frame.cpp  root.cpp
src/legion/: Dynamic_bitset.h  Lazy_pool.h  common.h  components.h  datatypes.h  ecs.core.h  engine.h  enum_reflection.h  event.h  luau.types.h  luau.userdata_utility.h  luau_libraries.h  luau_types.h  luau_utility.h  systems.h
src/luau_env/: Vec2.h  userdata_utility.h
src/luaulib/: Vec2.h  userdata_utility.h
src/modules/: drawing.cpp  files.cpp  filesystem.cpp  run.cpp  (+4 more)
test/: main.luau
tests/: TRS.luau  V2.luau  dummyImage.luau  dummy_game.luau  dummy_game2.luau  fpsCounter.luau  init.luau  main.luau  other_main.luau  transform.luau
(+28 files in other folders)
